# goals

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAMS.md  CHANGELOG.md  DOKUMENTATION_INDEX.md  Dockerfile  ENHANCED_PROJECT_PROMPT.md  PROJEKT_ENHANCEMENT_SUMMARY.md  README.md  REFACTORING_GUIDE.md  docker-compose.preprod.yml  docker-compose.prod.yml  pyproject.toml  stellwerk.example.toml
.github/: copilot-instructions.md
.github/workflows/: deploy-preprod.yml
docs/: deployment.md
scripts/: deploy-preprod.sh  deploy-prod.sh  dev.sh  preprod-autodeploy.sh
scripts/systemd/: stellwerk-preprod-autodeploy.service  stellwerk-preprod-autodeploy.timer
src/stellwerk/: __init__.py  __main__.py  app.py  cli.py  db.py  debug.py  models.py  notes.py  planner.py  repository.py  settings.py
src/stellwerk/static/: app.css  debug.js  toast.js
src/stellwerk/templates/: debug_console.html  index.html  track.html  work_package.html
tests/: test_cli_config.py  test_json_extract.py  test_notes.py  test_planner.py  test_repository_sqlite.py
