[project]
name = "stellwerk"
version = "0.1.0rc2"
description = "Stellwerk – Ziele, Aufgaben und Arbeitspakete als Zugstrecke planen und verfolgen."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Stellwerk Contributors" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "jinja2>=3.1",
  "python-multipart>=0.0.12",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.7",
]

[project.scripts]
stellwerk = "stellwerk.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stellwerk"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
